--- a/index.html
+++ b/index.html
@@ -1,11 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Percy Kuang</title>
-</head>
-<body>
-  <p>This is Percy Kuang Page</p>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>Percy Kuang</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      rel="shortcut icon"
+      href="https://raw.githubusercontent.com/percykuang/pk-images/main/icons/avatar-circle.png"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Rubik:300,500,700"
+    />
+    <style>
+      body {
+        font-family: "Rubik", -apple-system, BlinkMacSystemFont, "Segoe UI",
+          Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+          sans-serif;
+        font-size: calc(10px + 0.33vw);
+        -webkit-font-smoothing: antialiased;
+        padding: 5vh 10vw;
+        color: #121314;
+      }
+      h1 {
+        font-size: 4.5em;
+        font-weight: 500;
+        margin-bottom: 0;
+      }
+      p {
+        font-size: 1.6em;
+        font-weight: 300;
+        line-height: 1.4;
+        max-width: 28em;
+      }
+      a {
+        text-decoration: none;
+        white-space: nowrap;
+        color: #121314;
+        position: relative;
+      }
+      a:after {
+        content: "";
+        position: absolute;
+        z-index: -1;
+        top: 66%;
+        left: -0.1em;
+        right: -0.1em;
+        bottom: 0;
+        transition: top 200ms cubic-bezier(0, 0.8, 0.13, 1);
+        background-color: rgba(79, 192, 141, 0.5);
+      }
+      a:hover:after {
+        top: 0%;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>Hello.</h1>
+    <p style="font-weight: 500; font-size: 2.2em">My name is Percy Kuang.</p>
+    <p>
+      I am a software developer currently based in Beijing. I have been working
+      on the front-end at ByteDance for more than 2 years. I really love
+      thinking and coding, and enjoy all beautiful and elegant designs.
+    </p>
+    <p>
+      This is my
+      <a href="https://github.com/percykuang" target="_blank">Github</a>
+      account. If you are interested in my recent research, you can follow me.
+    </p>
+    <p>
+      Outside of programming and spending time with my girlfriend, I enjoy
+      online games (QQ Speed & crossfire are my favorite), spicy food, and
+      travel.
+    </p>
+  </body>
 </html>
