--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       account. If you are interested in my recent research, you can follow me.
     </p>
     <p>
-      Outside of programming and spending time with my girlfriend, I enjoy
+      Besides programming and spending time with my girlfriend, I enjoy
       online games (QQ Speed & crossfire are my favorite), spicy food, and
       travel.
     </p>
